--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -18,16 +18,16 @@ endmacro( create_product_variables)
 # define qualifiers
 set( BASEQUAL e19 )
 
-create_product_variables( larcoreobj  v09_00_00 )
-create_product_variables( larcorealg  v09_00_01 )
-create_product_variables( lardataobj  v09_00_03 )
-create_product_variables( lardataalg  v09_03_01 )
-create_product_variables( larsoftobj  v09_03_01 )
+create_product_variables( larcoreobj  v09_11_00_rc0 )
+create_product_variables( larcorealg  v09_11_00_rc0 )
+create_product_variables( lardataobj  v09_11_00_rc0 )
+create_product_variables( lardataalg  v09_11_00_rc0 )
+create_product_variables( larsoftobj  v09_11_00_rc0 )
 
-create_product_variables( canvas_root_io v1_05_02 )
-create_product_variables( gallery     v1_14_03 )
-create_product_variables( dk2nudata   v01_08_00g )
-create_product_variables( nusimdata   v1_21_03 )
+create_product_variables( canvas_root_io v1_06_02 )
+create_product_variables( gallery     v1_15_02 )
+create_product_variables( dk2nudata   v01_08_00h )
+create_product_variables( nusimdata   v1_22_00 )
 create_product_variables( mrb         v4_03_00 )
 create_product_variables( hub         v2_12_4 )
 
