--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -24,11 +24,11 @@ create_product_variables( lardataobj  v09_00_06 )
 create_product_variables( lardataalg  v09_03_04 )
 create_product_variables( larsoftobj  v09_04_00 )
 
-create_product_variables( canvas_root_io v1_05_02 )
-create_product_variables( gallery     v1_14_03 )
-create_product_variables( dk2nudata   v01_08_00g )
-create_product_variables( nusimdata   v1_21_05 )
-create_product_variables( mrb         v4_04_01 )
+create_product_variables( canvas_root_io v1_06_02 )
+create_product_variables( gallery     v1_15_02 )
+create_product_variables( dk2nudata   v01_08_00h )
+create_product_variables( nusimdata   v1_22_01 )
+create_product_variables( mrb         v4_04_02 )
 create_product_variables( hub         v2_12_4 )
 
 # these files should be copied to scisoft for each release
