--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -18,16 +18,16 @@ endmacro( create_product_variables)
 # define qualifiers
 set( BASEQUAL e19 )
 
-create_product_variables( larcoreobj  v09_01_00 )
-create_product_variables( larcorealg  v09_00_02 )
-create_product_variables( lardataobj  v09_00_06 )
-create_product_variables( lardataalg  v09_03_04 )
-create_product_variables( larsoftobj  v09_04_00 )
+create_product_variables( larcoreobj  v09_20_00_rc0 )
+create_product_variables( larcorealg  v09_20_00_rc0 )
+create_product_variables( lardataobj  v09_20_00_rc0 )
+create_product_variables( lardataalg  v09_20_00_rc0 )
+create_product_variables( larsoftobj  v09_20_00_rc0 )
 
-create_product_variables( canvas_root_io v1_06_02 )
-create_product_variables( gallery     v1_15_02 )
-create_product_variables( dk2nudata   v01_08_00h )
-create_product_variables( nusimdata   v1_22_01 )
+create_product_variables( canvas_root_io v1_07_02 )
+create_product_variables( gallery     v1_16_02 )
+create_product_variables( dk2nudata   v01_08_00i )
+create_product_variables( nusimdata   v1_22_02 )
 create_product_variables( mrb         v4_04_02 )
 create_product_variables( hub         v2_12_4 )
 
