--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -18,17 +18,17 @@ endmacro( create_product_variables)
 # define qualifiers
 set( BASEQUAL e19 )
 
-create_product_variables( larcoreobj  v09_02_00 )
-create_product_variables( larcorealg  v09_01_01 )
-create_product_variables( lardataobj  v09_01_03 )
-create_product_variables( lardataalg  v09_04_04 )
-create_product_variables( larsoftobj  v09_05_04 )
+create_product_variables( larcoreobj  v09_02_00_01 )
+create_product_variables( larcorealg  v09_01_01_01 )
+create_product_variables( lardataobj  v09_01_03_01 )
+create_product_variables( lardataalg  v09_04_04_01 )
+create_product_variables( larsoftobj  v09_05_04_01 )
 
-create_product_variables( canvas_root_io v1_07_02 )
-create_product_variables( gallery     v1_16_02 )
-create_product_variables( dk2nudata   v01_10_00 )
-create_product_variables( nusimdata   v1_22_03 )
-create_product_variables( mrb         v4_04_05 )
+create_product_variables( canvas_root_io v1_07_03 )
+create_product_variables( gallery     v1_16_03 )
+create_product_variables( dk2nudata   v01_10_00b )
+create_product_variables( nusimdata   v1_22_04 )
+create_product_variables( mrb         v4_04_06 )
 create_product_variables( hub         v2_12_4 )
 
 # these files should be copied to scisoft for each release
