--- a/bundle/larsoftobj-cfg.in
+++ b/bundle/larsoftobj-cfg.in
@@ -13,7 +13,14 @@ Build of gallery-@GALLERY_DOT_VERSION@ bundle failed with status ${status}
 EOF
   return ${status}
 fi
-[[ "${build_label}" == py2 ]] && pyqual=:${build_label}
+
+# temporary hack
+for _cps_cetmodules_ver in v2_22_00; do
+  ensure_support_package -f NULL -- cetmodules ${_cps_cetmodules_ver}
+done
+ensure_cetbuildtools v8_12_00
+unset _cps_cetmodules_ver
+
 
 do_build hub @HUB_VERSION@
 build_noarch mrb @MRB_VERSION@
