--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -15,21 +15,61 @@ macro( create_product_variables productname productversion )
    #message(STATUS "${PRODUCTNAME_UC} version is ${${PRODUCTNAME_UC}_VERSION}")
 endmacro( create_product_variables)
 
+function(create_version_variables VAR_STEM)
+  cmake_parse_arguments(CVV "LIST" "NAME" "QUALIFIERS" ${ARGN})
+  if (NOT VAR_STEM)
+    message(FATAL_ERROR "vacuous VAR_STEM")
+  elseif (NOT CVV_UNPARSED_ARGUMENTS)
+    message(FATAL_ERROR "No versions specified")
+  endif()
+  string(TOUPPER ${VAR_STEM} VAR_STEM_UC)
+  list(LENGTH CVV_UNPARSED_ARGUMENTS num_versions)
+  if (CVV_LIST OR num_versions GREATER 1)
+    set(list_suffix _LIST)
+  else()
+    set(list_suffix)
+  endif()
+  string(REPLACE ";" " " versions "${CVV_UNPARSED_ARGUMENTS}")
+  set(${VAR_STEM_UC}_VERSION${list_suffix} "${versions}" PARENT_SCOPE)
+  set(dot_versions)
+  foreach(VERSION ${CVV_UNPARSED_ARGUMENTS})
+    string(REPLACE "_" "." VDOT "${VERSION}")
+    string(REGEX REPLACE "^v" "" VDOT "${VDOT}")
+    list(APPEND dot_versions ${VDOT})
+  endforeach()
+  string(REPLACE ";" " " dot_versions "${dot_versions}")
+  set(${VAR_STEM_UC}_DOT_VERSION${list_suffix}
+    "${dot_versions}" PARENT_SCOPE)
+  if (NOT CVV_NAME)
+    set(CVV_NAME "${VAR_STEM}")
+  endif()
+  set(${VAR_STEM_UC}_NAME "${CVV_NAME}" PARENT_SCOPE)
+  if (CVV_QUALIFIERS)
+    set(${VAR_STEM_UC}_QUAL "${CVV_QUALIFIERS}" PARENT_SCOPE)
+  endif()
+endfunction()
+
 # define qualifiers
 set( BASEQUAL e20 )
 
-create_product_variables( larcoreobj  v09_02_01_01 )
-create_product_variables( larcorealg  v09_01_02_01 )
-create_product_variables( lardataobj  v09_01_04_01 )
-create_product_variables( lardataalg  v09_04_05_01 )
-create_product_variables( larsoftobj  v09_06_01_01 )
+create_product_variables( larcoreobj v09_02_01_02 )
+create_product_variables( larcorealg v09_01_02_02 )
+create_product_variables( lardataobj v09_01_04_02 )
+create_product_variables( lardataalg v09_04_05_02 )
+create_product_variables( larsoftobj v09_06_01_02 )
 
 create_product_variables( canvas_root_io v1_09_04 )
 create_product_variables( gallery     v1_18_04 )
 create_product_variables( dk2nudata   v01_10_00d )
 create_product_variables( nusimdata   v1_24_04 )
-create_product_variables( mrb v5_14_01 )
+create_product_variables( mrb v5_14_03 )
 create_product_variables( hub         v2_14_2 )
+
+# CMake, cetbuildtools, and cetmodules are special: 
+#  define as many versions as necessary.
+#create_version_variables(cmake LIST v3_17_3 v3_18_2 v3_19_6 v3_20_0)
+create_version_variables(cetbuildtools LIST v8_12_00 v8_13_02)
+create_version_variables(cetmodules LIST v2_22_00 v2_23_02)
 
 # these files should be copied to scisoft for each release
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/larsoftobj-cfg.in
