--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -52,24 +52,24 @@ endfunction()
 # define qualifiers
 set( BASEQUAL e20 )
 
-create_product_variables( larcoreobj v09_03_01 )
-create_product_variables( larcorealg v09_04_00 )
-create_product_variables( lardataobj v09_03_06 )
-create_product_variables( lardataalg v09_08_00 )
-create_product_variables( larsoftobj v09_13_00 )
+create_product_variables( larcoreobj v09_04_00 )
+create_product_variables( larcorealg v09_05_00 )
+create_product_variables( lardataobj v09_04_00 )
+create_product_variables( lardataalg v09_09_00 )
+create_product_variables( larsoftobj v09_14_00 )
 
 create_product_variables( canvas_root_io v1_09_04 )
 create_product_variables( gallery     v1_18_04 )
 create_product_variables( dk2nudata   v01_10_00d )
-create_product_variables( nusimdata v1_24_06 )
+create_product_variables( nusimdata v1_25_01 )
 create_product_variables( mrb v5_19_05 )
 create_product_variables( hub         v2_14_2 )
 
 # CMake, cetbuildtools, and cetmodules are special: 
 #  define as many versions as necessary.
 #create_version_variables(cmake LIST v3_17_3 v3_18_2 v3_19_6 v3_20_0)
-create_version_variables(cetbuildtools LIST v8_18_00 v8_18_01 v8_18_04 v8_18_05)
-create_version_variables(cetmodules LIST v2_29_00 v2_29_01 v2_29_02 v2_29_06 v2_29_07)
+create_version_variables(cetbuildtools LIST v8_18_00 v8_18_01 v8_18_04 v8_18_05 v8_18_09)
+create_version_variables(cetmodules LIST v2_29_00 v2_29_01 v2_29_02 v2_29_06 v2_29_07 v2_29_09 v2_29_12)
 
 # these files should be copied to scisoft for each release
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/larsoftobj-cfg.in
