--- a/bundle/larsoftobj-cfg.in
+++ b/bundle/larsoftobj-cfg.in
@@ -14,6 +14,10 @@ EOF
   return ${status}
 fi
 
+# infrastructure
+for cv in @CMAKE_VERSION_LIST@; do
+  do_build cmake ${cv}
+done
 for _cps_cetmodules_ver in @CETMODULES_VERSION_LIST@; do
   ensure_support_package -f NULL -- cetmodules ${_cps_cetmodules_ver}
 done
