--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -54,15 +54,15 @@ set( BASEQUAL e20 )
 
 create_product_variables( larcoreobj v09_05_02 )
 create_product_variables( larcorealg v09_06_05 )
-create_product_variables( lardataobj v09_09_00 )
-create_product_variables( lardataalg v09_10_08 )
+create_product_variables( lardataobj v09_09_00_01 )
+create_product_variables( lardataalg v09_10_08_01 )
 create_product_variables( larvecutils v09_01_01 )
-create_product_variables( larsoftobj v09_20_00 )
+create_product_variables( larsoftobj v09_20_00_01 )
 
 create_product_variables( canvas_root_io v1_09_04 )
 create_product_variables( gallery     v1_18_04 )
 create_product_variables( dk2nudata   v01_10_00d )
-create_product_variables( nusimdata v1_25_02 )
+create_product_variables( nusimdata v1_25_02_02 )
 create_product_variables( mrb v6_05_00 )
 create_product_variables( hub         v2_14_2 )
 create_product_variables( gh v2_10_1 )
