--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -61,8 +61,8 @@ create_product_variables( larsoftobj v09_26_00 )
 
 create_product_variables( canvas_root_io v1_09_05 )
 create_product_variables( gallery v1_18_05 )
-create_product_variables( dk2nudata   v01_10_00d )
-create_product_variables( nusimdata v1_26_01 )
+create_product_variables( dk2nudata v01_10_01a )
+create_product_variables( nusimdata v1_26_02 )
 create_product_variables( mrb v6_07_07 )
 create_product_variables( hub         v2_14_2 )
 create_product_variables( gh v2_10_1 )
