--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -69,9 +69,9 @@ create_product_variables( gh v2_14_4 )
 
 # CMake, cetbuildtools, and cetmodules are special: 
 #  define as many versions as necessary.
-create_version_variables(cmake LIST v3_17_3 v3_18_2 v3_19_6 v3_20_0 v3_21_4 v3_22_0 v3_22_2 v3_24_1 v3_25_2)
-create_version_variables(cetbuildtools LIST v8_18_01 v8_18_04 v8_18_05 v8_18_09 v8_19_02 v8_20_00)
-create_version_variables(cetmodules LIST v2_29_02 v2_29_05 v2_29_06 v2_29_12 v2_31_01 v3_02_01 v3_05_03 v3_05_04 v3_06_00 v3_06_01 v3_09_01 v3_09_03 v3_11_03 v3_12_00 v3_13_00 v3_13_02 v3_16_00 v3_20_00 v3_20_00)
+create_version_variables(cmake LIST v3_20_0 v3_21_4 v3_22_0 v3_22_2 v3_24_1 v3_25_2)
+create_version_variables(cetbuildtools LIST v8_20_00)
+create_version_variables(cetmodules LIST v3_16_00 v3_20_00)
 
 create_version_variables(ups v6_1_1)
 
