canvas_root_io, gallery, dk2nudata, nusimdata

--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -59,10 +59,10 @@ create_product_variables( lardataalg v09_14_00 )
 create_product_variables( larvecutils v09_03_00 )
 create_product_variables( larsoftobj v09_30_00 )
 
-create_product_variables( canvas_root_io v1_11_01 )
-create_product_variables( gallery v1_20_01 )
-create_product_variables( dk2nudata v01_10_01c )
-create_product_variables( nusimdata v1_27_00 )
+create_product_variables( canvas_root_io v1_11_02 )
+create_product_variables( gallery v1_20_02 )
+create_product_variables( dk2nudata v01_10_01d )
+create_product_variables( nusimdata v1_27_01 )
 create_product_variables( mrb v6_08_00 )
 create_product_variables( hub         v2_14_2 )
 create_product_variables( gh v2_14_4 )
