--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -52,12 +52,12 @@ endfunction()
 # define qualifiers
 set( BASEQUAL e26 )
 
-create_product_variables( larcoreobj v09_09_01 )
-create_product_variables( larcorealg v09_12_01 )
-create_product_variables( lardataobj v09_17_01 )
-create_product_variables( lardataalg v09_16_04 )
-create_product_variables( larvecutils v09_04_01 )
-create_product_variables( larsoftobj v09_34_01 )
+create_product_variables( larcoreobj v10_00_00rc0 )
+create_product_variables( larcorealg v10_00_00rc0 )
+create_product_variables( lardataobj v10_00_00rc0 )
+create_product_variables( lardataalg v10_00_00rc0 )
+create_product_variables( larvecutils v10_00_00rc0 )
+create_product_variables( larsoftobj v10_00_00rc0 )
 
 create_product_variables( canvas_root_io v1_11_02 )
 create_product_variables( gallery v1_20_02 )
