--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -52,26 +52,26 @@ endfunction()
 # define qualifiers
 set( BASEQUAL e26 )
 
-create_product_variables( larcoreobj v09_09_01 )
-create_product_variables( larcorealg v09_12_01 )
-create_product_variables( lardataobj v09_17_01 )
-create_product_variables( lardataalg v09_16_05 )
+create_product_variables( larcoreobj v09_90_00rc0 )
+create_product_variables( larcorealg v09_90_00rc0 )
+create_product_variables( lardataobj v09_90_00rc0 )
+create_product_variables( lardataalg v09_90_00rc0 )
 create_product_variables( larvecutils v09_04_01 )
-create_product_variables( larsoftobj v09_34_02 )
+create_product_variables( larsoftobj v09_90_00rc0 )
 
-create_product_variables( canvas_root_io v1_11_02 )
-create_product_variables( gallery v1_20_02 )
-create_product_variables( dk2nudata v01_10_01d )
-create_product_variables( nusimdata v1_27_02 )
+create_product_variables( canvas_root_io v1_13_01 )
+create_product_variables( gallery v1_22_01 )
+create_product_variables( dk2nudata v01_10_01e )
+create_product_variables( nusimdata v1_28_00 )
 create_product_variables( mrb v6_09_05 )
 create_product_variables( hub         v2_14_2 )
-create_product_variables( gh v2_14_4 )
+create_product_variables( gh v2_25_1 )
 
 # CMake, cetbuildtools, and cetmodules are special: 
 #  define as many versions as necessary.
-create_version_variables(cmake LIST v3_20_0 v3_21_4 v3_22_0 v3_22_2 v3_24_1 v3_25_2)
+create_version_variables(cmake LIST v3_20_0 v3_21_4 v3_22_0 v3_22_2 v3_24_1 v3_25_2 v3_27_4)
 ##create_version_variables(cetbuildtools LIST v8_20_00)
-create_version_variables(cetmodules LIST v3_16_00 v3_20_00)
+create_version_variables(cetmodules LIST v3_16_00 v3_20_00 v3_22_02)
 
 create_version_variables(ups v6_1_1)
 
