--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -52,17 +52,17 @@ endfunction()
 # define qualifiers
 set( BASEQUAL e26 )
 
-create_product_variables( larcoreobj v09_90_00rc0 )
-create_product_variables( larcorealg v09_90_00rc0 )
-create_product_variables( lardataobj v09_90_00rc0 )
-create_product_variables( lardataalg v09_90_00rc0 )
+create_product_variables( larcoreobj v09_90_00rc1 )
+create_product_variables( larcorealg v09_90_00rc1 )
+create_product_variables( lardataobj v09_90_00rc1 )
+create_product_variables( lardataalg v09_90_00rc1 )
 create_product_variables( larvecutils v09_04_01 )
-create_product_variables( larsoftobj v09_90_00rc0 )
+create_product_variables( larsoftobj v09_90_00rc1 )
 
-create_product_variables( canvas_root_io v1_13_01 )
-create_product_variables( gallery v1_22_01 )
-create_product_variables( dk2nudata v01_10_01e )
-create_product_variables( nusimdata v1_28_00 )
+create_product_variables( canvas_root_io v1_13_03 )
+create_product_variables( gallery v1_22_03 )
+create_product_variables( dk2nudata v01_10_01f )
+create_product_variables( nusimdata v1_28_01 )
 create_product_variables( mrb v6_09_05 )
 create_product_variables( hub         v2_14_2 )
 create_product_variables( gh v2_25_1 )
