--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -52,17 +52,17 @@ endfunction()
 # define qualifiers
 set( BASEQUAL e26 )
 
-create_product_variables( larcoreobj v09_10_00 )
-create_product_variables( larcorealg v09_13_00 )
-create_product_variables( lardataobj v09_18_01 )
-create_product_variables( lardataalg v09_17_01 )
+create_product_variables( larcoreobj v09_10_01 )
+create_product_variables( larcorealg v09_13_01 )
+create_product_variables( lardataobj v09_18_02 )
+create_product_variables( lardataalg v09_17_02 )
 create_product_variables( larvecutils v09_04_01 )
-create_product_variables( larsoftobj v09_35_01 )
+create_product_variables( larsoftobj v09_35_02 )
 
-create_product_variables( canvas_root_io v1_13_05 )
-create_product_variables( gallery v1_22_05 )
-create_product_variables( dk2nudata v01_10_01g )
-create_product_variables( nusimdata v1_28_04 )
+create_product_variables( canvas_root_io v1_13_06 )
+create_product_variables( gallery v1_22_06 )
+create_product_variables( dk2nudata v01_10_01h )
+create_product_variables( nusimdata v1_28_05 )
 create_product_variables( mrb v6_09_06 )
 create_product_variables( hub         v2_14_2 )
 create_product_variables( gh v2_25_1 )
