--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -54,15 +54,15 @@ set( BASEQUAL e26 )
 
 create_product_variables( larcoreobj v10_00_00 )
 create_product_variables( larcorealg v10_00_02 )
-create_product_variables( lardataobj v10_00_04 )
-create_product_variables( lardataalg v10_00_04 )
+create_product_variables( lardataobj v10_21_00rc0 )
+create_product_variables( lardataalg v10_21_00rc0 )
 create_product_variables( larvecutils v09_04_02 )
-create_product_variables( larsoftobj v10_00_05 )
+create_product_variables( larsoftobj v10_21_00rc0 )
 
 create_product_variables( canvas_root_io v1_13_06 )
 create_product_variables( gallery v1_22_06 )
 create_product_variables( dk2nudata v01_10_01h )
-create_product_variables( nusimdata v1_28_06 )
+create_product_variables( nusimdata v1_29_00 )
 create_product_variables( mrb v6_09_09 )
 create_product_variables( hub         v2_14_2 )
 create_product_variables( gh v2_25_1 )
