nusimdata is on github

--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -62,6 +62,7 @@ create_product_variables( larsoftobj v10_21_00rc1 )
 create_product_variables( canvas_root_io v1_13_06 )
 create_product_variables( gallery v1_22_06 )
 create_product_variables( dk2nudata v01_10_01h )
+create_version_variables(nufinder v1_02_01)
 create_product_variables( nusimdata v1_29_00 )
 create_product_variables( mrb v6_09_11 )
 create_product_variables( hub         v2_14_2 )
