--- a/bundle/CMakeLists.txt
+++ b/bundle/CMakeLists.txt
@@ -62,8 +62,9 @@ create_product_variables( larsoftobj v10_02_00 )
 create_product_variables( canvas_root_io v1_13_06 )
 create_product_variables( gallery v1_22_06 )
 create_product_variables( dk2nudata v01_10_01h )
+create_version_variables(nufinder v1_02_01)
 create_product_variables( nusimdata v1_29_00 )
-create_product_variables( mrb v6_09_10 )
+create_product_variables( mrb v6_09_11 )
 create_product_variables( hub         v2_14_2 )
 create_product_variables( gh v2_25_1 )
 
